# sipstuff

./: CLAUDE.md  DOCKERHUB_OVERVIEW.md  Dockerfile  Makefile  README.md  dataset_metadata.csv  easyeffects-input-piper-tts-recording.json  howto_pjsip_live_transcribe.md  howto_pjsip_simulate.md  howto_voice_train.md  pyproject.toml  requirements-dev.txt  requirements.txt  train-my-voice.sh  train.sh
.github/workflows/: buildmultiarchandpush.yml
dist_scripts/: copy_pjsua2_from_docker.sh  install_pjsip.sh
repo_scripts/: build-container-multiarch.sh  update_badge.py
simulate_files/: README.md  docker-compose.yml  extensions.conf  modules.conf  pjsip-stack.yaml  pjsip.conf  stack.sh  start_asterisk.sh  start_callee.sh  start_callee_autoanswer.sh  start_callee_realtime_tts.sh  start_caller.sh
simulate_files/probe-test/: README.md  probe-test-exec.yaml  probe-test-http.yaml  probe-test-tcp.yaml
sipstuff/: README.md  __init__.py  audio.py  cli.py  sip_account.py  sip_call.py  sip_callee.py  sip_caller.py  sip_endpoint.py  sip_media.py  sip_types.py  sipconfig.py  snddevice_list.py
sipstuff/autoanswer/: README.md  __init__.py  pjsip_autoanswer_tts_n_wav.py
sipstuff/realtime/: README.md  __init__.py  pjsip_realtime_tts.py
sipstuff/stt/: __init__.py  live.py  stt.py
sipstuff/training/: README.md  __init__.py  convert_metadata_rhasspypiper_to_piper1gpl.py  record_dataset.py  record_gui.py
sipstuff/transcribe/: README.md  __init__.py  pjsip_live_transcribe.py
sipstuff/tts/: __init__.py  live.py  tts.py
tests/: test_sipstuff.py
